--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 Flask==0.10.1
-Jinja2==2.7.2
+Flask-SQLAlchemy==2.0
+Jinja2==2.7.3
 MarkupSafe==0.23
-Werkzeug==0.9.4
-argparse==1.2.1
-gunicorn==18.0
+SQLAlchemy==0.9.9
+Werkzeug==0.10.1
+aniso8601==0.92
+gunicorn==19.3.0
 itsdangerous==0.24
-psycopg2==2.5.3
-wsgiref==0.1.2
+python-raven==0.7
+pytz==2014.10
+six==1.9.0
